<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="pagerTabStrip_titles">
        <item>文件</item>
        <item>图片</item>
        <item>音乐</item>
    </string-array>
    <string-array name="pagerTabStrip_titles_whq">
        <item>文件</item>
        <item>图片</item>
        <item>音乐</item>
    </string-array>

    <string name="app_name">文件传输</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_music_list">MusicListActivity</string>
    <string name="title_activity_select_file">SelectFileActivity</string>
    <string name="title_activity_file_manager">FileManagerActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="info">该演示程序限制了编码和解码的次数，在识别n（n为随机值）次后程序会自动停止识别（如果发送的字符太长程序也不会发送），若想继续使用请重新启动该程序（商业正式版没有这个限制）,作者QQ:29600731。</string>
    <string name="init_str">009_@aazAZ</string>
    <string name="input_char">请输入数字、字母和_@</string>
    <string name="file_info_canread">是否可读:</string>
    <string name="file_info_canwrite">是否可写:</string>
    <string name="file_info_ishidden">是否隐藏:</string>
    <string name="file_info_location">路径:</string>
    <string name="file_info_modified">修改日期:</string>
    <string name="file_info_size">大小:</string>
    <string name="file_size">%d 字节</string>
    <string name="title_activity_logo">LogoActivity</string>
    <string name="app_right">Copyright © 2016 指南针 All Rights Reversed.</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="immediate_register">立即注册</string>
    <string name="account">账户</string>
    <string name="prompt_account">手机号</string>
    <string name="password">密码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="title_activity_transition_progress">TransitionProgressActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_bluetooth_test">BluetoothTestActivity</string>

</resources>